# WHISKER-labeler

./: .gitignore  LICENSE  README.md  environment.yaml  launch.bat  pyproject.toml  requirements.txt
whisker/: main.py
whisker/base/: application.py  demo.py  job.py  logger.py  messaging.py  node.py  task.py
whisker/base/core_nodes/: callback_observer.py  cli.py  cluster.py  queue_router.py  service_management.py  socket_router.py
whisker/base/topics/: __init__.py  cli.py  job.py  node.py  queue_router.py  service_management.py  socket_router.py
whisker/core/: __init__.py  application.py  base_operation_helper.py  base_workflow_operation_helper.py  bundle.py  constants.py  dataset_operations.py  project.py  project_operations.py  topics.py  workspace.py
whisker/core/messaging/: bus.py
whisker/core/study/: dataset.py  dataset_operations.py  project_operations.py
whisker/core/utils/: __init__.py  ascii_banner.py  feature_visualization.py  generate_video_thumbnail.py  import_linter.py  masking.py  progress.py
whisker/core/workers/: bundle_workers.py  importer.py  registry.py  subsample_dataset.py
whisker/core/workflows/: workflow_enum.py
whisker/gui/: application.py  constants.py  debug_window.py  job_manager.py  main_tabs.py  main_window.py  signals.py  worker_wrapper.py
whisker/scripts/: clean_behavior_names.py  filter_hdf5.py  log_viewer.py  pose_labeling_standalone.py  subtract_video_background.py  suggest_bbox_size.py
whisker/services/: __init__.py
whisker/terminal/: application.py  bridge.py  command_handlers.py  session.py
(+112 files in other folders)
